--- a/01-demo/index.html
+++ b/01-demo/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 </head>
 <body>
+    <!-- ローディング画面 -->
+    <div id="loading"></div>
     <section class="hero">
         <h1 class="title">WCB Fashion<br>Collection</h1>
     </section>
